fix: fix map feed grid gap

--- a/src/components/MapPreviewCard/MapFeed.module.css
+++ b/src/components/MapPreviewCard/MapFeed.module.css
@@ -11,8 +11,13 @@
 	background-color: #3e3e3e !important;
 }
 
+.Container :global(.masonry-grid) {
+	margin-top: 1rem;
+	margin-bottom: 2rem;
+}
+
 .Container :global(.masonry-grid_column) {
-	display: grid;
-	row-gap: 0.5rem;
-	margin-top: 0.75rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
